05/m05a01triangles-handout/m05a01triangles-handout/grading/2023-10-04-19-22-29/compile.err
Triangles.java:6: error: cannot find symbol
        Scanner scanner = new Scanner(System.in).useLocale(Locale.ENGLISH);
                                                           ^
  symbol:   variable Locale
  location: class Triangles
1 error
